--- a/signUp.html
+++ b/signUp.html
@@ -51,43 +51,13 @@
                         </div>
                     </div>
                     <div class="d-grid">
-                        <button type="button" class="btn btn-success">Signup</button>
+                        <button type="submit" class="btn btn-success">Signup</button>
                         <p class="text-center text-muted mt-2">When you register by clicking the Signup Button, you
                             agree to our <a href="#">Terms and
                                 Conditions</a> and <a href="#">Privacy Policy</a></p>
                         <p class="text-center">Already have an account?<a href="login.html">Login Here</a></p>
                     </div>
                 </form>
-
-                <!-- <form action="#">
-                    <div class="input-group mb-3">
-                        <label for="firstName">First Name</label>
-                        <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First Name" required />
-                    </div>
-                    <div class="input-group mb-3">
-                        <label for="lastName">Last name</label>
-                        <input type="text" class="form-control" name="lastName" id="" placeholder="Last Name">
-                    </div>
-                    <div class="input-group mb-3">
-                        <label for="email">Email</label>
-                        <input type="text" class="form-control" name="email" id="email" placeholder="Email">
-                    </div>
-                    <div class="input-group mb-3">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" name="password" id="password" placeholder="Password">
-                    </div>
-                    <div class="input-group mb-3">
-                        <label for="confirmPass">Confirm Password</label>
-                        <input type="password" class="form-control" name="confirmPass" id="confirmPass" placeholder="Confirm Password">
-                    </div>
-                    <div class="d-grid">
-                        <button type="button" class="btn btn-success">Signup</button>
-                        <p class="text-center text-muted mt-2">When you register by clicking Signup Buttoon, You agree to our <a href="#">Terms and
-                                Conditions</a> and <a href="#">Privacy Policy</a></p>
-                        <p class="text-center">Already have an account?<a href="login.html">Login Here</a></p>
-                    </div>
-                </form> -->
-                <!-- Form end -->
             </div>
         </div>
     </div>
