Plants Project Frontend Initiated Commit

--- a/plants.html
+++ b/plants.html
@@ -115,7 +115,7 @@
                 of him and we
                 will help
                 you save him</p>
-              <div class="btn btn-primary btn-lg d-flex justify-content-center btn_adjust" type="submit">Upload Image
+              <div class="btn btn-primary btn-lg d-flex text-center btn_adjust" type="submit">Upload Image
               </div>
             </div>
           </div>
