Travel website sql connection

--- a/travelWebsiteHomePg/index.html
+++ b/travelWebsiteHomePg/index.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="css/homePg.css">
 </head>
 
-<body >
+<body>
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <p class="display-2 fw-bold d-flex align-items-center justify-content-start pt-3 px-1">Iniya travels</p>
+                        <p class="display-2 fw-bold d-flex align-items-center justify-content-start pt-3 px-1">Iniya
+                            travels</p>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -56,11 +57,13 @@
                             with the colors of adventure, culture, and the beauty of unexplored landscapes. Where the
                             destination is not just a place on the map but a chapter in your story. Join us, and let the
                             wanderlust in your heart unfold its wings. Travel, Explore, Live."</p>
-                        <a href="#" class="border border-2 rounded pt-1 pb-1 px-2 me-3">Book&nbsp;Your&nbsp;Adventure</a>
-                        <a href="#" class="border border-2 rounded pt-1 pb-1 px-2 me-3">Know&nbsp;About&nbsp;Travel&nbsp;Plans</a>
+                        <a href="#"
+                            class="border border-2 rounded pt-1 pb-1 px-2 me-3">Book&nbsp;Your&nbsp;Adventure</a>
+                        <a href="#"
+                            class="border border-2 rounded pt-1 pb-1 px-2 me-3">Know&nbsp;About&nbsp;Travel&nbsp;Plans</a>
                     </div>
                 </div>
-                <div class="col-md-6 container-fluid" >
+                <div class="col-md-6 container-fluid">
                     <img src="css/images/flightCorner.jpg" alt="Flight-Window-Image"
                         class="Flight-Window-Image mt-5 ml-2 pt-5">
                 </div>
@@ -70,7 +73,28 @@
     <!-- <div class="img">
         <img src="css/images/flights.jpg" alt="buildings" class="img img-fluid mx-auto flight-img">
     </div> -->
+    <footer class="bg-dark text-white text-center py-4 footer-sec">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <a href="#" class="text-white text-decoration-none">Email</a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#" class="text-white text-decoration-none">GitHub</a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#"
+                        class="text-white text-decoration-none">Instagram</a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#"
+                        class="text-white text-decoration-none">Facebook</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
